<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:id="@+id/motion"
    app:layoutDescription="@xml/activity_splash_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_sign_up_title"
        android:textColor="@color/main_text_color"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_sign_up_sub_title"
        android:textColor="@color/secondary_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/selector_input_field"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvSubTitle"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:startIconDrawable="@drawable/ic_dog_sym"
        app:startIconTint="@color/selector_input_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text_color"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/selector_input_field"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/emailContainer"
        app:layout_constraintStart_toStartOf="@id/emailContainer"
        app:layout_constraintTop_toBottomOf="@id/emailContainer"
        app:startIconDrawable="@drawable/ic_key_sym"
        app:startIconTint="@color/selector_input_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text_color"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/selector_button"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textColor="@color/selector_button_text"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/passwordContainer"
        app:layout_constraintStart_toStartOf="@id/passwordContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer"
        tools:text="Sign up" />

    <LinearLayout
        android:id="@+id/llSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNext">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/or"
            android:textColor="@color/secondary_text_color"
            android:textFontWeight="400" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            tools:text="Sign in" />

    </LinearLayout>

    <View
        android:id="@+id/splashBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSplash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rick_morty_bg" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/splashTitle"
        android:layout_width="280dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rick_morty_title" />

</androidx.constraintlayout.motion.widget.MotionLayout>